--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,26 @@
 [package]
-name = "grpc-server-rs"
+name = "grpc-pdfserver-rs"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]] # Bin to run the HelloWorld gRPC server
+name = "helloworld-server"
+path = "src/server.main.rs"
+
+[[bin]] # Bin to run the HelloWorld gRPC client
+name = "helloworld-client"
+path = "src/client.main.rs"
 
 [dependencies]
+tonic = "0.11"
+prost = "0.12"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
+tokio-stream = "0.1.14"
+bytes = "1.5.0"
+futures = "0.3.30"
+tokio-fs = "0.1.7"
+tokio-codec = "0.1.2"
+tokio-util = "0.7.10"
+
+[build-dependencies]
+tonic-build = "0.11"
